--- a/src/partials/introduction.html
+++ b/src/partials/introduction.html
@@ -17,7 +17,7 @@
       <div class="gallery-boxes__box">
         <h3>RESIDENCY</h3>
         <p>/ Facilitates immersive studies</p>
-        <p>/ Accommodates international talent</p>
+        <p>/ Welcomes international talent</p>
         <p>/ Compensates featured artists</p>
       </div>
     </div>
