--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -14,21 +14,29 @@
           <input class="form-section__input" type="email" name="email">
         </div>
         <div class="form-section">
-          <div class="label">Project Title</div>
-          <input class="form-section__input" type="text" name="title">
-        </div>
-        <div class="form-section">
           <div class="label">Website</div>
           <input class="form-section__input" type="url" name="website">
         </div>
-
         <div class="form-section">
+          <div class="label">City</div>
+          <input class="form-section__input" type="text" name="location">
+        </div>
+        <div class="form-section">
+          <div class="label">Project Title</div>
+          <input class="form-section__input" type="text" name="title">
+        </div>
+
+        <div class="form-section" style="display: block;">
           <div class="label">Project Description</div>
           <textarea class="form-section__input" name="description" placeholder="the what and the how of your project. 250 words or less"></textarea>
         </div>
         <div class="form-section">
           <div class="label">Interactive Description</div>
           <textarea class="form-section__input" type="text" name="interactive" placeholder="describe how the audience online will interact with your project. 250 words or less"></textarea>
+        </div>
+        <div class="form-section">
+          <div class="label">Requirements</div>
+          <textarea class="form-section__input" name="requirements" placeholder="decribe the tools or technologies you need to execute this."></textarea>
         </div>
       </form>
 
