--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -21,7 +21,7 @@
 
     <h3 class="container__page__subheading">/ Eric Rabinowitz</h3>
     <p>
-      <a class="digital" target="_blank" href="http://ericrabinowitz.com/">ericrabinowitz.com</a> Web developer and creative coder based in Atlanta, who believes we must all actively nudge the Internet to be more open and share its feelings. Currently working on a digital platform to help artists manage their networks and get referred to collaboration or hiring opportunities.
+      <a class="digital" target="_blank" href="http://ericrabinowitz.com/">ericrabinowitz.com</a> Web developer and creative coder based in Atlanta, who believes we must all nudge the Internet to be more open and share its feelings with us. Currently working on a digital platform to help artists manage their networks and get referred to collaboration or hiring opportunities.
     </p>
 
     <div class="opencall__cta">
