--- a/src/styles/above-fold.scss
+++ b/src/styles/above-fold.scss
@@ -1,6 +1,8 @@
 .above-fold {
   max-width: $maxWidth;
-  margin: 6rem auto 0;
+  margin: 0 auto;
+  position: relative;
+  padding: 0 3 * $containerPadding + 16px;
 
   &__header {
     font-size: 1.5rem;
@@ -23,6 +25,15 @@
     &__row {
       display: flex;
       justify-content: space-between;
+
+      span.invisible {
+        visibility: hidden;
+      }
+
+      &--live {
+        font-size: 1.2em;
+        margin: 0 0.5em 0.5em;
+      }
 
       .line {
         flex-grow: 1;
