--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'mixins.scss';
 @import 'nav.scss';
 @import 'modal.scss';
+@import 'live.scss';
 @import 'applications.scss';
 @import 'above-fold.scss';
 @import 'introduction.scss';
@@ -12,6 +13,7 @@
 html,body {
   margin: 0;
   padding: 0;
+  height: 100%;
   width: 100%;
   font-family: $font;
   font-weight: 500;
@@ -70,6 +72,12 @@ a {
   font-weight: 500;
 }
 
+.info-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   position: absolute;
   top: 3 * $containerPadding + 16px;
@@ -101,37 +109,37 @@ a {
       }
 
       $h2Height: 61px;
-      &:nth-child(2) {
+      &:nth-child(1) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px;
         }
       }
 
-      &:nth-child(3) {
+      &:nth-child(2) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px + ($h2Height);
         }
       }
 
-      &:nth-child(4) {
+      &:nth-child(3) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px + ($h2Height * 2);
         }
       }
 
-      &:nth-child(5) {
+      &:nth-child(4) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px + ($h2Height * 3);
         }
       }
 
-      &:nth-child(6) {
+      &:nth-child(5) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px + ($h2Height * 4);
         }
       }
 
-      &:nth-child(7) {
+      &:nth-child(6) {
         h2 {
           top: 3 * $containerPadding + 16px + $borderWidth - 2px + ($h2Height * 5);
         }
