--- a/src/partials/live.html
+++ b/src/partials/live.html
@@ -13,7 +13,7 @@
       </div>
       <div class="camera-frame__corner camera-frame__corner--tr">
         <div class="camera-frame__corner__content">
-          <div class="camera-frame__corner__content__live"><span>LIVE</span> <span class="recording-dot recording-dot--live"></span></div>
+          <div class="camera-frame__corner__content__live"><span>STAND BY</span> <span class="pause-icon recording-dot--live"></span></div>
         </div>
       </div>
       <div class="camera-frame__corner camera-frame__corner--bl">
