--- a/src/partials/live.html
+++ b/src/partials/live.html
@@ -54,7 +54,14 @@
         </div>
         
         <div class="camera-frame__title-block">
-          <div class="camera-frame__title">
+          <div class="live-iframe-container">
+            <div class="live-iframe-container__title">
+              <div class="live-iframe-container__title__strip live-iframe-container__title__strip--tl"><span class="n9to5">9to5</span> GOES</div>
+              <div class="live-iframe-container__title__strip live-iframe-container__title__strip--br">LIVE FRIDAY</div>
+            </div>
+            <iframe src="https://player.twitch.tv/?channel=9to5tv" frameborder="0" allowfullscreen="false" scrolling="no" height="100%" width="100%"></iframe>
+          </div>
+<!--           <div class="camera-frame__title">
             <div class="camera-frame__title__original">/9to5.tv/</div>
             <div class="camera-frame__title__copy camera-frame__title__copy--red">/9to5.tv/</div>
             <div class="camera-frame__title__copy camera-frame__title__copy--blue">/9to5.tv/</div>
@@ -68,7 +75,7 @@
             <div class="camera-frame__title__original">/9to5.tv/</div>
             <div class="camera-frame__title__copy camera-frame__title__copy--red">/9to5.tv/</div>
             <div class="camera-frame__title__copy camera-frame__title__copy--blue">/9to5.tv/</div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
