adding artists section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
 @import 'live.scss';
 @import 'applications.scss';
 @import 'above-fold.scss';
-@import 'introduction.scss';
+@import 'artists.scss';
 @import 'opencall.scss';
 @import 'partners.scss';
 @import 'team.scss';
