--- a/src/partials/artists.html
+++ b/src/partials/artists.html
@@ -2,35 +2,49 @@
   <h2><a href="#artists" class="scroll no-slash">Participating Artists</a></h2>
 
   <div class="container__page__contents">
-    <h3 class="container__page__subheading">DRAWN / SUPERBRIGHT &amp; Art404</h3>
-    <p>
-      <a class="digital" target="_blank" href="http://superbright.me/">superbright.me</a> Head to head VR Drawing Tool with one node in Atlanta and the other at TV 404 in New York. Battles involving both nodes will be streamed over the course of the month, along with solo node "Pictionary" where the audience tries to guess the subject being drawn.
-    </p>
 
-    <h3 class="container__page__subheading">Brannon Dorsey / Holy Pager</h3>
-    <p>
-      <a class="digital" target="_blank" href="http://brannondorsey.com/">brannondorsey.com</a> Pagers are actually capable of receiving all pages that come through their network. However, only the pages directed at you are the ones you receive. Brannon hacked three pagers to display and print every page that is sent on their network. No digital component.
-    </p>
+    <h3 class="container__page__subheading">Basix / Kevin Siwoff</h3>
+    <p><a class="digital" target="_blank" href="http://kevinsiwoff.com/">kevinsiwoff.com</a> the importance of ecommerce (Coming Sep. 18th)</p>
 
-    <h3 class="container__page__subheading">Kevin Siwoff / Basix Lockr</h3>
-    <p>
-      <a class="digital" target="_blank" href="http://kevinsiwoff.com/">kevinsiwoff.com</a> Satirical ecommerce perfomarce art / new media piece. Users order "goods" (really just paper mache-esque interpretations of what they ordered). Eventually those projects are delivered to The Cube, unboxed (which will be main livestream events), and placed on livestream pedestals.
-    </p>
+    <h3 class="container__page__subheading">Supercruft / Andrew Venell</h3>
+    <p><a class="digital" target="_blank" href="http://andrewvenell.com/">andrewvenell.com</a> abstract video mosh (Coming Sep 13th)</p>
 
-    <h3 class="container__page__subheading">Andrew Venell / Supercruft Induction Terminal</h3>
-    <p>
-      <a class="digital" target="_blank" href="http://andrewvenell.com/">andrewvenell.com</a> An interactive station in Atlanta with two streams of edited found video footage that can be combined into infinite abstract compositions by the Cube user. The user's creation will be livestreamed in real time on a microsite.
-    </p>
+    <h3 class="container__page__subheading">Streetcat.Media / Maggie Kane</h3>
+    <p><a class="digital" target="_blank" href="http://www.streetcat.media/">streetcat.media</a> unending new media knowhow</p>
+
+    <h3 class="container__page__subheading">Holypager / Brannon Dorsey </h3>
+    <p><a class="digital" target="_blank" href="http://brannondorsey.com/">brannondorsey.com</a> pagers printing pages (Coming Sep. 18th)</p>
+
+    <h3 class="container__page__subheading">DRAWN / SuperBright</h3>
+    <p><a class="digital" target="_blank" href="http://superbright.me/">superbright.me</a> head-to-head vr sketch</p>
+
+    <h3 class="container__page__subheading">From Coast to Coast / Tim Kim</h3>
+    <p><a class="" target="_blank" href="http://gallery.9to5.tv/from-coast-to-coast">view</a> worldwide sunrise and set</p>
+
+    <h3 class="container__page__subheading">Points-Lines-Planes-Blobs / Bradley Bowers</h3>
+    <p><a class="digital" target="_blank" href="https://www.bradleylbowers.com/">bradleylbowers.com</a> 3d modeling workshops</p>
+
+
+    <h3 class="container__page__subheading">WWWWWWWWWWWWW.XYZ / Point in Passing</h3>
+    <p><a class="" target="_blank" href="http://gallery.9to5.tv/wwwwwwwwwwwww-xyz">view</a> keyboard vj</p>
+
+    <h3 class="container__page__subheading">EPRA / Adam Shavin</h3>
+    <p><a class="" target="_blank" href="http://gallery.9to5.tv/epra">view</a> files transformed into music & poetry</p>
+
+    <h3 class="container__page__subheading">Sign and T-Rex in Red / Damjanski</h3>
+    <p><a class="digital" target="_blank" href="http://damjanski.com/">damjanski.com</a> live protest by you (Coming Sep. 29th)</p>
+
+    <h3 class="container__page__subheading">Dream.Almost.Digital / Johan Nordberg</h3>
+    <p><a class="" target="_blank" href="http://gallery.9to5.tv/dream-canvas">view</a> deep dream live sketch</p>
+
+    <h3 class="container__page__subheading">Us, Aggregated / Mimi Onuha</h3>
+    <p><a class="digital" target="_blank" href="http://mimionuoha.com/">mimionuoha.com</a> family photos with crowdsourced comparison</p>
 
     <h3 class="container__page__subheading">Also Featuring</h3>
     <p>
 Chris Collins
 ** Sean Fahie
-** Point in Passing
 ** Kyle Morais
-** Johan Nordberg
-** Adam Shavin
-** Maggie Kane
 ** Very Sandwich
 ** SlimeNet
 ** WonderGoblin
@@ -38,13 +52,7 @@ Chris Collins
 ** Andy Pruett
 ** Kellie Vinal
 ** Modugno & Mallory
-** Andrew Venell
-** Project Adrift
-** Tim Kim
-** Damjanski
-** Mimi Onuha
 ** Lisa Parra
-** Bradley Bowers
 ** Tony Zaret</p>
 
   </div>
