--- a/src/partials/info.html
+++ b/src/partials/info.html
@@ -14,81 +14,139 @@
         </div>
       </div>
       <div class="above-fold__header">
-        <p><span class="n9to5">9to5</span> is a month-long digital art exhibition in Atlanta that dissolves the boundary between artist and audience by way of an experimental livestream and other emerging interfaces.</p>
-        <p>Unlike other art exhibitions, the ideal <span class="n9to5">9to5</span> experience is online, where patrons can interact with the projects and performances broadcasted, and influence the final artworks using our custom built suite of inputs.</p>
+        <p><span class="n9to5">9to5</span> is a month-long digital art exhibition in Atlanta that dissolves the boundary between artist and audience by way of an experimental livestream and emerging interfaces.</p>
+        <p>The ideal <span class="n9to5">9to5</span> participants can interact with  projects, performances, and broadcasts that influence the final artworks using a custom built suite of tools.</p>
       </div>
       <p class="above-fold__footer">
-
       </p>
+
       <div class="opencall__cta">
         <div class="opencall__cta__row">
-          <span class="sm">F</span>
-          <span class="sm">O</span>
-          <span class="sm">L</span>
-          <span class="sm">L</span>
-          <span class="sm">O</span>
+          <span class="sm">V</span>
+          <span class="sm">I</span>
+          <span class="sm">E</span>
           <span class="sm">W</span>
-          <span class="sm">&nbsp;</span>
-          <span class="sm">U</span>
-          <span class="sm">S</span>
+          <span class="sm"> </span>
+          <span class="sm">T</span>
+          <span class="sm">H</span>
+          <span class="sm">E</span>
         </div>
-        <a href="https://www.facebook.com/9to5tv" target="_blank" class="opencall__cta__row no-slash">
-          <span class="md">/</span>
-          <span class="md">F</span>
-          <span class="md">A</span>
-          <span class="md">C</span>
-          <span class="md">E</span>
-          <span class="md">B</span>
-          <span class="md">O</span>
-          <span class="md">O</span>
-          <span class="md">K</span>
-          <span class="md">/</span>
+        <a href="http://gallery.9to5.tv/" class="opencall__cta__row no-slash">
+          <span class="lg">ONLINE</span>
+          <span class="lg">GALLERY</span>
         </a>
-        <a href="https://www.instagram.com/9to5.tv/" target="_blank" class="opencall__cta__row no-slash">
-          <span class="md">/</span>
-          <span class="md">I</span>
-          <span class="md">N</span>
-          <span class="md">S</span>
-          <span class="md">T</span>
-          <span class="md">A</span>
-          <span class="md">G</span>
-          <span class="md">R</span>
-          <span class="md">A</span>
-          <span class="md">M</span>
-          <span class="md">/</span>
+      </div>
+    </div>
+    <div class="opencall__cta">
+        <div class="opencall__cta__row">
+          <span class="sm">LIVE</span>
+          <span class="sm">MUSIC</span>
+          <span class="sm">PERFORMANCE</span>
+        </div>
+        <div class="opencall__cta__row">
+          <span class="sm">SATRURDAY</span>
+          <span class="sm">7PM</span>
+          <span class="sm">FREE</span>
+        </div>
+        <div class="opencall__cta__row">
+          <span class="sm">ONLINE</span>
+          <span class="sm">OR</span>
+          <span class="sm">25 PARK PL NE</span>
+        </div>
+        <a href="https://www.facebook.com/events/1960781034138003/" target="_blank" class="opencall__cta__row no-slash">
+          <span class="lg">/</span>
+          <span class="lg">V</span>
+          <span class="lg">A</span>
+          <span class="lg">I</span>
+          <span class="lg">L</span>
+          <span class="lg">/</span>
         </a>
-        <a href="https://twitter.com/9to5_tv" target="_blank" class="opencall__cta__row no-slash">
-          <span class="md">/</span>
-          <span class="md">T</span>
-          <span class="md">W</span>
-          <span class="md">I</span>
-          <span class="md">T</span>
-          <span class="md">T</span>
-          <span class="md">E</span>
-          <span class="md">R</span>
-          <span class="md">/</span>
+        <a href="https://www.facebook.com/events/1960781034138003/" target="_blank" class="opencall__cta__row no-slash">
+          <span class="lg">/</span>
+          <span class="lg">B</span>
+          <span class="lg">|_</span>
+          <span class="lg">A</span>
+          <span class="lg">N</span>
+          <span class="lg">K</span>
+          <span class="lg">/</span>
         </a>
       </div>
 
-      <!-- Begin MailChimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
-          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-          /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-      </style>
-      <div id="mc_embed_signup">
-      <form action="//9to5.us16.list-manage.com/subscribe/post?u=2b84719ded272f32daf9047bc&amp;id=9c3764ff66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Subscribe to 9to5: Works in Progress</label>
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b84719ded272f32daf9047bc_9c3764ff66" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
-      </form>
-      </div>
-      <!--End mc_embed_signup-->
-    </div>
   </div>
+</div>
+<!-- <div style="text-align: center; max-width: 100%; margin: 0 48px;">
+  <div style="font-size: 1.5rem;">WEEK ONE:</div>
+  <img height="auto" width="100%" style="max-width:1100px; margin: 32px auto; text-align: center;" src="img/week1.png">
+</div> -->
+
+<div class="above-fold">
+  <div class="opencall__cta">
+    <div class="opencall__cta__row">
+      <span class="sm">F</span>
+      <span class="sm">O</span>
+      <span class="sm">L</span>
+      <span class="sm">L</span>
+      <span class="sm">O</span>
+      <span class="sm">W</span>
+      <span class="sm">&nbsp;</span>
+      <span class="sm">U</span>
+      <span class="sm">S</span>
+    </div>
+    <a href="https://www.facebook.com/9to5tv" target="_blank" class="opencall__cta__row no-slash">
+      <span class="md">/</span>
+      <span class="md">F</span>
+      <span class="md">A</span>
+      <span class="md">C</span>
+      <span class="md">E</span>
+      <span class="md">B</span>
+      <span class="md">O</span>
+      <span class="md">O</span>
+      <span class="md">K</span>
+      <span class="md">/</span>
+    </a>
+    <a href="https://www.instagram.com/9to5.tv/" target="_blank" class="opencall__cta__row no-slash">
+      <span class="md">/</span>
+      <span class="md">I</span>
+      <span class="md">N</span>
+      <span class="md">S</span>
+      <span class="md">T</span>
+      <span class="md">A</span>
+      <span class="md">G</span>
+      <span class="md">R</span>
+      <span class="md">A</span>
+      <span class="md">M</span>
+      <span class="md">/</span>
+    </a>
+    <a href="https://twitter.com/9to5_tv" target="_blank" class="opencall__cta__row no-slash">
+      <span class="md">/</span>
+      <span class="md">T</span>
+      <span class="md">W</span>
+      <span class="md">I</span>
+      <span class="md">T</span>
+      <span class="md">T</span>
+      <span class="md">E</span>
+      <span class="md">R</span>
+      <span class="md">/</span>
+    </a>
+  </div>
+
+  <!-- Begin MailChimp Signup Form -->
+  <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
+  <div id="mc_embed_signup">
+  <form action="//9to5.us16.list-manage.com/subscribe/post?u=2b84719ded272f32daf9047bc&amp;id=9c3764ff66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+      <label for="mce-EMAIL">Subscribe to 9to5: Works in Progress</label>
+      <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b84719ded272f32daf9047bc_9c3764ff66" tabindex="-1" value=""></div>
+      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
+  </form>
+  </div>
+  <!--End mc_embed_signup-->
 </div>
