--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import './pages/home.scss';
 
+@import './components/navbar.scss';
 @import './components/live-container.scss';
 @import './components/camera-frame.scss';
 // @import 'nav.scss';
