--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,9 +9,9 @@
 // @import 'nav.scss';
 // @import 'modal.scss';
 // @import 'applications.scss';
-// @import 'above-fold.scss';
+@import 'above-fold.scss';
 // @import 'artists.scss';
-// @import 'opencall.scss';
+@import 'opencall.scss';
 // @import 'partners.scss';
 // @import 'team.scss';
 
@@ -94,7 +94,7 @@ a {
 
   &__page {
     position: relative;
-    border: $borderWidth solid $blk;
+    // border: $borderWidth solid $blk;
     border-top: none;
     border-bottom: none;
     box-sizing: border-box;
@@ -159,7 +159,7 @@ a {
       top: 0;
       margin: 0;
       font-size: 1rem;
-      border-top: $borderWidth solid $blk;
+      // border-top: $borderWidth solid $blk;
       box-sizing: border-box;
 
       a {
@@ -279,83 +279,3 @@ p {
 .border {
   fill: $blk;
 }
-
-.gallery-boxes {
-  width: 100%;
-  margin: 2rem 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: stretch;
-
-  &__pair {
-    flex-shrink: 1;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: stretch;
-  }
-
-  &__box {
-    border-top: $borderWidth solid $blk;
-    border-bottom: $borderWidth solid $blk;
-    flex-basis: 100%;
-    flex-shrink: 1;
-    min-height: 16.6rem;
-    margin: $containerPadding auto;
-    padding: $containerPadding;
-    padding-bottom: $containerPadding * 2 + 48px;
-    position: relative;
-
-    @include respond-to('medium') {
-      flex-basis: 20rem;
-      border: $borderWidth solid $blk;
-      margin: $containerPadding * 2;
-      padding: $containerPadding * 2;
-      padding-bottom: $containerPadding * 2 + 20px;
-    }
-
-    h3 {
-      font-weight: 500;
-      font-size: 2.1rem;
-      margin: 0 0 $containerPadding;
-    }
-
-    p {
-      text-align: left;
-      font-family: 'merriweather', serif;
-      font-weight: 300;
-      font-size: 1rem;
-      margin: 0;
-    }
-
-    &__award {
-      font-family: 'merriweather', serif;
-      position: absolute;
-      right: $containerPadding;
-      bottom: $containerPadding + 28px;
-      line-height: 20px;
-      font-size: 0.7rem;
-
-      @include respond-to('medium') {
-        left: $containerPadding * 2;
-        bottom: $containerPadding * 2;
-        right: initial;
-      }
-    }
-
-    &__link {
-      position: absolute;
-      right: $containerPadding;
-      bottom: $containerPadding;
-      line-height: 20px;
-
-      @include respond-to('medium') {
-        right: $containerPadding * 2;
-        bottom: $containerPadding * 2;
-      }
-    }
-  }
-}
-
