--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,27 +1,16 @@
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 2.5rem;
-  line-height: 2.5rem;
-  background-color: white;
-  z-index: 1000;
+  // width: 80%;
+  // max-width: 1188px;
+  margin: auto;
+  font-size: 1.2rem;
+  padding: 0 1.5em;
 
-  &__content {
-    width: 80%;
-    max-width: 1188px;
-    margin: auto;
-    font-size: 1.2rem;
+  a {
+    color: black;
+    margin-right: 1.2em;
 
-    a {
-      color: black;
-      margin-right: 1.2em;
-
-      &:hover {
-        color: $blue;
-      }
+    &:hover {
+      color: $blue;
     }
   }
-
 }
