--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,9 @@
 @import 'mixins.scss';
 
 @import './pages/home.scss';
+@import './pages/schedule.scss';
 
+@import './components/frame.scss';
 @import './components/navbar.scss';
 @import './components/live-container.scss';
 @import './components/camera-frame.scss';
