--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -13,4 +13,12 @@
       color: $blue;
     }
   }
+
+  &__links {
+    display: none;
+
+    @include respond-to('medium') {
+      display: inline-block;
+    }
+  }
 }
