--- a/src/styles/pages/schedule/project.scss
+++ b/src/styles/pages/schedule/project.scss
@@ -11,6 +11,15 @@
   }
 
   &__artist {
+    font-size: 1.2rem;
     margin: 0.5em 0 0;
+
+    a {
+      font-size: 1rem;
+    }
+  }
+
+  &__description {
+    margin-top: 0.5em;
   }
 }
