--- a/src/styles/pages/schedule.scss
+++ b/src/styles/pages/schedule.scss
@@ -1,3 +1,4 @@
+@import './schedule/schedule-container.scss';
 @import './schedule/project.scss';
 
 .schedule {
@@ -15,13 +16,6 @@
       @include respond-to('medium') {
         font-size: 2.5rem;
       }
-    }
-
-    &__date {
-      display: inline-block;
-      background-color: #ddd;
-      margin-top: 3rem;
-      font-size: 1.15rem;
     }
 
     &__project {
