--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import './pages/home.scss';
 @import './pages/schedule.scss';
+@import './pages/artist.scss';
 
 @import './components/frame.scss';
 @import './components/navbar.scss';
