--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,12 @@
 @import './pages/home.scss';
 @import './pages/schedule.scss';
 @import './pages/artist.scss';
+@import './pages/about.scss';
 
 @import './components/frame.scss';
 @import './components/navbar.scss';
 @import './components/live-container.scss';
+@import './components/logo-container.scss';
 @import './components/camera-frame.scss';
 // @import 'nav.scss';
 // @import 'modal.scss';
