--- a/src/styles/above-fold.scss
+++ b/src/styles/above-fold.scss
@@ -2,7 +2,7 @@
   max-width: $maxWidth;
   margin: 0 auto;
   position: relative;
-  padding: 0 3 * $containerPadding + 16px;
+  padding: 32px 3 * $containerPadding + 16px 0;
 
   &__header {
     font-size: 1.5rem;
