--- a/src/styles/components/camera-frame.scss
+++ b/src/styles/components/camera-frame.scss
@@ -1,5 +1,11 @@
 .camera-frame {
 
+  &--bordered {
+    @include respond-to('large') {
+      border: 8px solid black;
+    }
+  }
+
   &__title {
     display: block;
     font-size: 2.6rem;
@@ -51,17 +57,21 @@
   }
 
   &__statue {
+    display: inline-block;
     pointer-events: none;
     text-align: center;
     margin: 16px auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include respond-to('large') {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
 
     img { 
       width: 590px;
@@ -99,13 +109,13 @@
 
 
 .camera-frame-wrapper {
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  right: 16px;
-  bottom: 16px;
 
   @include respond-to('large') {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    right: 16px;
+    bottom: 16px;
     width: 80%;
     max-width: 1188px;
     display: inline-block;
@@ -180,18 +190,20 @@
 }
 
 .camera-frame {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-
-  &__content {
+  @include respond-to('large') {
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
+
+    &__content {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
   }
 
   &__zoom {
