--- a/src/styles/components/camera-frame.scss
+++ b/src/styles/components/camera-frame.scss
@@ -124,7 +124,7 @@
     transform: translate(-50%, -50%);
 
     &:after {
-      padding-top: 51%;
+      // padding-top: 51%;
       display: block;
       content: '';
     }
