--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,15 +11,11 @@
 @import './components/live-container.scss';
 @import './components/logo-container.scss';
 @import './components/gallery-container.scss';
+@import './components/project-feature.scss';
 @import './components/camera-frame.scss';
-// @import 'nav.scss';
-// @import 'modal.scss';
-// @import 'applications.scss';
+
 @import 'above-fold.scss';
-// @import 'artists.scss';
 @import 'opencall.scss';
-// @import 'partners.scss';
-// @import 'team.scss';
 
 html,body,#app,[data-reactroot] { height: 100% !important; }
 html,body {
