--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -19,15 +19,12 @@
     width: 80%;
     max-width: 1188px;
     margin: 0 auto 32px;
-    overflow-x: hidden;
 
     &__title {
+      max-width: $maxWidth;
+      margin: 0 auto;
       font-size: 1.5rem;
-      text-align: center;
-
-      > span {
-        text-align: left;
-      }
+      text-align: left;
 
       @include respond-to('medium') {
         font-size: 2.5rem;
