--- a/src/styles/components/camera-frame.scss
+++ b/src/styles/components/camera-frame.scss
@@ -1,3 +1,5 @@
+@import 'camera-frame-components.scss';
+
 .camera-frame {
 
   &--bordered {
@@ -78,114 +80,23 @@
       max-width: 100%;
     }
   }
-
-  &__zoom {
-    display: none;
-
-    @include respond-to('large') {
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      height: 20%;
-      width: 1.7%;
-      border: 4px solid $blk;
-      z-index: 100;
-    }
-
-    &:after {
-      content: '';
-      position: absolute;
-      left: 2px;
-      right: 2px;
-      top: 50%;
-      background-color: $blk;
-      height: 6px;
-    }
-  }
 }
 
 
 .camera-frame-wrapper {
 
   @include respond-to('large') {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    right: 16px;
-    bottom: 16px;
+    position: relative;
     width: 80%;
     max-width: 1188px;
-    display: inline-block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: block;
+    margin: 85px auto;
 
     &:after {
-      // padding-top: 51%;
+      padding-top: 42.8%;
       display: block;
       content: '';
     }
-  }
-}
-
-@keyframes flashing {
-  0% {
-    opacity: 1;
-  }
-
-  49% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-
-.recording-dot {
-  display: inline-block;
-  height: 0.8em;
-  width: 0.8em;
-  background-color: $red;
-  border-radius: 50%;
-  vertical-align: middle;
-  align-self: center;
-
-  &--live {
-    animation: flashing 1.2s linear infinite;
-  }
-}
-
-.pause-icon {
-  display: inline-block;
-  font-size: 0.8em;
-  height: 1em;
-  width: 1em;
-  position: relative;
-
-  &:before, &:after {
-    content: '';
-    width: 0.4em;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background-color: $blk;
-  }
-
-  &:before {
-    left: 0;
-  }
-
-  &:after {
-    right: 0;
   }
 }
 
@@ -199,182 +110,11 @@
 
     &__content {
       position: absolute;
-      top: 0;
-      bottom: 0;
+      top: 8px;
+      bottom: 8px;
       right: 0;
       left: 0;
-    }
-  }
-
-  &__zoom {
-    display: none;
-
-    @include respond-to('large') {
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      height: 20%;
-      width: 1.7%;
-      border: 4px solid $blk;
-      z-index: 100;
-    }
-
-    &:after {
-      content: '';
-      position: absolute;
-      left: 2px;
-      right: 2px;
-      top: 50%;
-      background-color: $blk;
-      height: 6px;
-    }
-  }
-
-  &__corner {
-    position: absolute;
-    display: inline-block;
-    width: 9%;
-    border: none;
-    z-index: 100;
-
-    @include respond-to('large') {
-      border: $borderWidth solid $blk;
-    }
-
-    &:after {
-      padding-top: 100%;
-      display: block;
-      content: '';
-    }
-
-    &__content {
-      position: absolute;
-      text-align: center;
-      font-weight: 700;
-
-      &__live {
-        font-size: 1.4rem;
-        white-space: nowrap;
-
-        > span {
-          display: inline-block;
-          vertical-align: middle;
-        }
-      }
-
-      &__battery {
-        height: 1.25em;
-        width: 2.5em;
-        border: 2px solid $blk;
-        position: relative;
-        white-space: nowrap;
-
-        &__bar {
-          position: absolute;
-          top: 2px;
-          bottom: 2px;
-          left: 2px;
-          margin: auto;
-          width: 0.5em;
-          background-color: $blk;
-
-          &:nth-child(2) {
-            left: 4px;
-            margin-left: 0.5em;
-          }
-
-          &:nth-child(3) {
-            left: 6px;
-            margin-left: 1em;
-          }
-        }
-
-        &:after {
-          content: '';
-          margin: auto;
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          right: -0.375em;
-          width: 0.125em;
-          height: 0.5em;
-          border: 2px solid $blk;
-          border-left: none;
-        }
-      }
-
-      &__bars {
-        display: flex;
-        align-items: center;
-        margin-top: 4px;
-
-        &__bar {
-          display: inline-block;
-          width: 0.5em;
-          height: 1em;
-          background-color: $blk;
-          margin-left: 2px;
-
-          &--small {
-            height: 0.5em;
-          }
-        }
-      }
-    }
-
-    &--tl {
-      top: 0;
-      left: 0;
-      border-right: none;
-      border-bottom: none;
-
-      .camera-frame__corner__content {
-        left: 50%;
-        top: 50%;
-        transform: translate(0, -50%);
-      }
-    }
-
-    &--tr {
-      top: 0;
-      right: 0;
-      border-left: none;
-      border-bottom: none;
-
-      .camera-frame__corner__content {
-        right: 50%;
-        top: 50%;
-        transform: translate(0, -50%);
-      }
-    }
-
-    &--bl {
-      bottom: 0;
-      left: 0;
-      border-right: none;
-      border-top: none;
-
-      .camera-frame__corner__content {
-        left: 50%;
-        bottom: 50%;
-        transform: translate(0, 50%);
-      }
-    }
-
-    &--br {
-      bottom: 0;
-      right: 0;
-      border-left: none;
-      border-top: none;
-
-      .camera-frame__corner__content {
-        right: 50%;
-        bottom: 50%;
-        transform: translate(0, 50%);
-      }
+      margin: 9% 0;
     }
   }
 }
