--- a/src/styles/components/logo-container.scss
+++ b/src/styles/components/logo-container.scss
@@ -2,4 +2,10 @@
   position: relative;
   width: 100%;
   height: 100%;
+
+  .camera-frame-wrapper {
+    top: 50%;
+    transform: translateY(-50%);
+    margin: auto;
+  }
 }
