--- a/src/styles/components/camera-frame.scss
+++ b/src/styles/components/camera-frame.scss
@@ -76,8 +76,10 @@
     }
 
     img { 
-      width: 590px;
-      max-width: 100%;
+      // width: 590px;
+      // max-width: 100%;
+      height: 164%;
+      width: auto;
     }
   }
 }
@@ -90,7 +92,9 @@
     width: 80%;
     max-width: 1188px;
     display: block;
-    margin: 85px auto;
+    // margin: 85px auto;
+    margin: 0 auto;
+
 
     &:after {
       padding-top: 42.8%;
@@ -101,6 +105,11 @@
 }
 
 .camera-frame {
+
+  &__content {
+    position: relative;
+  }
+
   @include respond-to('large') {
     position: absolute;
     top: 0;
@@ -117,4 +126,5 @@
       margin: 9% 0;
     }
   }
+
 }
