--- a/src/styles/components/logo-container.scss
+++ b/src/styles/components/logo-container.scss
@@ -1,11 +1,35 @@
 .logo-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  // position: relative;
+  // width: 100%;
+  max-height: 100%;
+  padding: 64px 0;
+  margin: 0 16px;
+  overflow: hidden;
+
+  &__space {
+    width: 80%;
+    max-width: 1188px;
+    display: inline-block;
+
+    &:after {
+      content: '';
+      display: block;
+      padding-top: 13%;
+    }
+  }
 
   .camera-frame-wrapper {
-    top: 50%;
-    transform: translateY(-50%);
-    margin: auto;
+    // top: 50%;
+    // transform: translateY(-50%);
+    // margin: auto;
+  }
+
+  .camera-frame__content {
+    @include respond-to('large') {
+      top: 0;
+      bottom: 0;
+      margin: 0;
+    }
+
   }
 }
