--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -18,7 +18,7 @@
   &__section {
     width: 80%;
     max-width: 1188px;
-    margin: 0 auto 32px;
+    margin: 0 auto 64px;
 
     &__title {
       max-width: $maxWidth;
@@ -28,6 +28,18 @@
 
       @include respond-to('medium') {
         font-size: 2.5rem;
+      }
+    }
+
+    &__details {
+      max-width: $maxWidth;
+      margin: 0 auto;
+      font-size: 1.5rem;
+      text-align: center;
+      letter-spacing: 0.048em;
+
+      @include respond-to('medium') {
+        text-align: justify;
       }
     }
 
